<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="derry.assessmenttest.views.AboutFragment"
    android:background="@color/very_light_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                android:foregroundGravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <derry.assessmenttest.utils.RoundedImageView
                        android:id="@+id/photo"
                        android:layout_height="100dp"
                        android:layout_width="100dp"
                        android:src="@drawable/photo"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_name"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimaryText"/>

                    <View
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="225dp"
                        android:layout_height="5dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_address"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorSecondaryText"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_email"
                        android:layout_gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/colorSecondaryText"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            android:foregroundGravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <com.silencedut.expandablelayout.ExpandableLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expWithParentScroll="true"
                app:expDuration = "300"
                app:expExpandScrollTogether = "false"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/summary"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimaryText"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorAccent"/>
                    <WebView
                        android:paddingTop="5dp"
                        android:id="@+id/viewResume"
                        android:layout_width="match_parent"
                        android:layout_height="400dp" />
                </LinearLayout>
            </com.silencedut.expandablelayout.ExpandableLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            android:foregroundGravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <com.silencedut.expandablelayout.ExpandableLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expWithParentScroll="true"
                app:expDuration = "300"
                app:expExpandScrollTogether = "false"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hobby"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimaryText"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorAccent"/>
                    <WebView
                        android:paddingTop="5dp"
                        android:id="@+id/viewHobby"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />
                </LinearLayout>
            </com.silencedut.expandablelayout.ExpandableLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>